--- a/Views/CashRegisterPage.xaml
+++ b/Views/CashRegisterPage.xaml
@@ -65,8 +65,6 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        
-
                         <TextBox x:Name="SearchBox"
                              Grid.Column="1"
                              HorizontalAlignment="Right"
@@ -84,6 +82,7 @@
                     <Grid Grid.Column="0">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="40"/>
+                            <RowDefinition Height="Auto"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
@@ -97,7 +96,40 @@
                                         Content="-"/>
                         </StackPanel>
 
-                        <Grid Grid.Row="1" Margin="0 10 0 20">
+                        <StackPanel Grid.Row="1" 
+                                    Orientation="Horizontal" 
+                                    Margin="20 10">
+                            <Border Background="{StaticResource SecondaryButtonBrush}"
+                                    BorderBrush="{StaticResource BorderBrush}" BorderThickness="1"
+                                    CornerRadius="12" Height="76" Width="130">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+
+                                    <StackPanel Orientation="Horizontal"
+                                                Margin="14 10">
+                                        <Border Background="{StaticResource BackgroundBrush}"
+                                                CornerRadius="12" Width="20" Height="20">
+                                            <Image Source="/Resources/Icons/balance-icon.png"
+                                                   Height="12" Width="12" RenderOptions.BitmapScalingMode="HighQuality"/>
+                                        </Border>
+                                        <TextBlock Text="Balance"
+                                                   VerticalAlignment="Center" Margin="6 0"
+                                                   Style="{DynamicResource DescriptionLabelStyle}"/>
+                                    </StackPanel>
+
+                                    <TextBlock Grid.Row="1" 
+                                               Style="{DynamicResource SubtitleLabelStyle}"
+                                               Text="$2,300.80" Margin="14 0"
+                                               FontSize="18"
+                                               HorizontalAlignment="Right"/>
+                                </Grid>
+                            </Border>
+                        </StackPanel>
+
+                        <Grid Grid.Row="2" Margin="0 10 0 20">
                             <DataGrid x:Name="SupplierOrdersDataGrid"
                                   AutoGenerateColumns="False"
                                   IsReadOnly="True"
@@ -199,7 +231,7 @@
 
                             <Border x:Name="ButtonsPanel" Grid.Row="2" BorderBrush="{DynamicResource SecondaryBrush}"
                                 BorderThickness="0 0.5 0 0">
-                                
+
                             </Border>
                         </Grid>
                     </Border>
