--- a/Views/CashRegisterPage.xaml
+++ b/Views/CashRegisterPage.xaml
@@ -4,9 +4,18 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ItaliaPizzaClient.Views"
+      xmlns:utilities="clr-namespace:ItaliaPizzaClient.Utilities"
       mc:Ignorable="d" 
       d:DesignHeight="520" d:DesignWidth="800"
       Title="CashRegisterPage">
+
+    <Page.Resources>
+        <utilities:FlowToColorConverter x:Key="FlowToColorConverter"/>
+
+        <Style x:Key="AmountTextBlockStyle" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="{Binding FinancialFlow, Converter={StaticResource FlowToColorConverter}}"/>
+        </Style>
+    </Page.Resources>
 
     <Grid Background="{StaticResource BackgroundBrush}">
         <Grid.RowDefinitions>
@@ -46,6 +55,13 @@
                             Content="{DynamicResource CashRegister_BtnOpenRegister}"
                             Click="Click_BtnOpenRegister" >
                         <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
+                    </Button>
+                    <Button x:Name="BtnCloseRegister" 
+                            Style="{DynamicResource PrimaryButtonStyle}"
+                            Content="{DynamicResource CashRegister_BtnCloseRegister}"
+                            Click="Click_BtnCloseRegister"
+                            Visibility="Collapsed">
+                        <Button.Tag>/Resources/Icons/cancel-icon.png</Button.Tag>
                     </Button>
                 </StackPanel>
             </Grid>
@@ -99,58 +115,51 @@
                         <StackPanel Grid.Row="1" 
                                     Orientation="Horizontal" 
                                     Margin="20 10">
-                            <Border Background="{StaticResource SecondaryButtonBrush}"
+                            <Border Padding="0 8"
                                     BorderBrush="{StaticResource BorderBrush}" BorderThickness="1"
-                                    CornerRadius="12" Height="76" Width="130">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto"/>
-                                        <RowDefinition Height="*"/>
-                                    </Grid.RowDefinitions>
+                                    CornerRadius="12" Height="Auto" Width="150">
+                                <Grid >
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
 
-                                    <StackPanel Orientation="Horizontal"
-                                                Margin="14 10">
-                                        <Border Background="{StaticResource BackgroundBrush}"
-                                                CornerRadius="12" Width="20" Height="20">
-                                            <Image Source="/Resources/Icons/balance-icon.png"
-                                                   Height="12" Width="12" RenderOptions.BitmapScalingMode="HighQuality"/>
-                                        </Border>
+                                    <Image Source="/Resources/Icons/balance-icon.png"
+                                           RenderOptions.BitmapScalingMode="HighQuality"
+                                           Width="22" Height="22"
+                                           Margin="12 0"/>
+
+                                    <StackPanel Grid.Column="1" VerticalAlignment="Center">
                                         <TextBlock Text="Balance"
-                                                   VerticalAlignment="Center" Margin="6 0"
-                                                   Style="{DynamicResource DescriptionLabelStyle}"/>
+                                                   Style="{DynamicResource DescriptionLabelStyle}"
+                                                   Margin="0 0 0 4"/>
+                                        <TextBlock x:Name="TbBalance" 
+                                                   Style="{DynamicResource SubtitleLabelStyle}"/>
                                     </StackPanel>
-
-                                    <TextBlock Grid.Row="1" 
-                                               Style="{DynamicResource SubtitleLabelStyle}"
-                                               Text="$2,300.80" Margin="14 0"
-                                               FontSize="18"
-                                               HorizontalAlignment="Right"/>
                                 </Grid>
                             </Border>
                         </StackPanel>
 
                         <Grid Grid.Row="2" Margin="0 10 0 20">
-                            <DataGrid x:Name="SupplierOrdersDataGrid"
-                                  AutoGenerateColumns="False"
-                                  IsReadOnly="True"
-                                  RowStyle="{DynamicResource DataGridRowStyle1}"
-                                  ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}"
-                                  CellStyle="{DynamicResource DataGridCellStyle1}"
-                                  Style="{DynamicResource DataGridStyle1}" >
+                            <DataGrid x:Name="TransactionsDataGrid"
+                                      AutoGenerateColumns="False"
+                                      IsReadOnly="True"
+                                      RowStyle="{DynamicResource DataGridRowStyle1}"
+                                      ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}"
+                                      CellStyle="{DynamicResource DataGridCellStyle1}"
+                                      Style="{DynamicResource DataGridStyle1}"
+                                      SelectionChanged="TransactionsDataGrid_SelectionChanged">
                                 <DataGrid.Columns>
-                                    <DataGridTextColumn Header="{DynamicResource OrdSuppliers_TableHFolio}"
-                                                    Binding="{Binding OrderFolio}" Width="2*" 
-                                                    CellStyle="{StaticResource DataGridCellStyle0}">
+                                    <DataGridTextColumn Header="-"
+                                                        Binding="{Binding SupplyName}" Width="3.5*" 
+                                                        CellStyle="{StaticResource DataGridCellStyle0}">
                                         <DataGridTextColumn.HeaderStyle>
                                             <StaticResource ResourceKey="DataGridColumnHeaderStyle0"/>
                                         </DataGridTextColumn.HeaderStyle>
                                     </DataGridTextColumn>
-                                    <DataGridTextColumn Header="{DynamicResource OrdSuppliers_TableHSupplier}" 
-                                                    Binding="{Binding SupplierName}" Width="3.5*"/>
-                                    <DataGridTextColumn Header="{DynamicResource OrdSuppliers_TableHStatus}" 
-                                                    Binding="{Binding StatusDescription}" Width="2*"/>
-                                    <DataGridTextColumn Header="{DynamicResource OrdSuppliers_TableHOrderDate}" 
-                                                    Binding="{Binding OrderedDateFormatted}" Width="2.5*"/>
+                                    <DataGridTextColumn Header="{DynamicResource CashRegister_TableHConcept}" Binding="{Binding ConceptDescription}" Width="2.5*"/>
+                                    <DataGridTextColumn Header="{DynamicResource CashRegister_TableHAmount}" Binding="{Binding SignedAmount}" Width="2*" ElementStyle="{StaticResource AmountTextBlockStyle}" />
+                                    <DataGridTextColumn Header="{DynamicResource CashRegister_TableHDate}" Binding="{Binding FormattedDate}" Width="2*"/>
                                 </DataGrid.Columns>
                             </DataGrid>
 
@@ -173,66 +182,31 @@
                     <Border Grid.Column="1" 
                         BorderBrush="{StaticResource SecondaryBrush}" 
                         BorderThickness="0.5,0,0,0">
-                        <Grid x:Name="SupplierOrderDetailsPanel"
-                          Visibility="Collapsed" >
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="40"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-
-                            <ContentControl Grid.Row="0" Margin="20 0" VerticalAlignment="Bottom"
-                                        Style="{StaticResource TagStyle}" 
-                                        Content="{DynamicResource OrdSuppliers_OrdSupplier}" />
-
-                            <Grid Grid.Row="1">
+                        <Grid>
+                            <Grid Grid.Row="0" x:Name="TransactionDetailsPanel"
+                                  Visibility="Visible">
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto" />
-                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="40"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
 
-                                <Border Margin="20 0" Grid.Row="0" 
-                                    BorderThickness="0 0 0 0.5"
-                                    BorderBrush="{StaticResource SecondaryBrush}">
-                                    <StackPanel Margin="0 10 0 16">
-                                        <TextBlock x:Name="SupplierName" FontSize="13"
+                                <StackPanel Grid.Row="0" Orientation="Horizontal" 
+                                            VerticalAlignment="Bottom" 
+                                            Margin="20 0" >
+                                    <ContentControl Style="{StaticResource TagStyle}" 
+                                                    Content="{DynamicResource Glb_Transaction}"/>
+                                </StackPanel>
+
+                                <StackPanel Grid.Row="1" Margin="20 0">
+                                    <TextBlock x:Name="TransactionConcept" FontSize="13"
                                                Style="{DynamicResource SubtitleLabelStyle}" />
-                                        <TextBlock x:Name="OrderStatus" Margin="0 2 0 0"
-                                               Style="{DynamicResource RegularLabelStyle}"
-                                               Foreground="{StaticResource PrimaryButtonBrush}" />
-                                        <TextBlock x:Name="OrderFolio" Margin="0 4 0 0"
-                                               FontFamily="{StaticResource SFMonoRegular}"
-                                               Style="{DynamicResource DescriptionLabelStyle}" />
-                                        <StackPanel Orientation="Horizontal" Margin="0 6 0 0">
-                                            <Image Source="/Resources/Icons/calendar-icon.png" 
-                                               Style="{StaticResource IconViewStyle}" />
-                                            <TextBlock Text="{DynamicResource OrdSuppliers_DetailsOrderedDate}"
-                                                   Style="{DynamicResource DescriptionLabelStyle}" 
-                                                   Margin="0 0 4 0" />
-                                            <TextBlock x:Name="OrderedDate" 
-                                                   Style="{DynamicResource DescriptionLabelStyle}" />
-                                        </StackPanel>
-
-                                        <StackPanel x:Name="DeliveredPanel" Orientation="Horizontal" Margin="0 6 0 0">
-                                            <Image Source="/Resources/Icons/calendar-icon.png" 
-                                               Style="{StaticResource IconViewStyle}" />
-                                            <TextBlock Text="{DynamicResource OrdSuppliers_DetailsDeliveredDate}"
-                                                   Style="{DynamicResource DescriptionLabelStyle}" 
-                                                   Margin="0 0 4 0" />
-                                            <TextBlock x:Name="DeliveredDate" 
-                                                   Style="{DynamicResource DescriptionLabelStyle}" />
-                                        </StackPanel>
-
-                                    </StackPanel>
-                                </Border>
-
-                                <StackPanel x:Name="OrderDetailsPanel" Grid.Row="1" Margin="20"/>
+                                    <TextBlock x:Name="TransactionDescription"
+                                               Style="{DynamicResource DescriptionLabelStyle}"
+                                               TextWrapping="Wrap" MaxWidth="220" 
+                                               HorizontalAlignment="Stretch" />
+                                </StackPanel>
                             </Grid>
-
-                            <Border x:Name="ButtonsPanel" Grid.Row="2" BorderBrush="{DynamicResource SecondaryBrush}"
-                                BorderThickness="0 0.5 0 0">
-
-                            </Border>
                         </Grid>
                     </Border>
                 </Grid>
