--- a/App.xaml
+++ b/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="Resources/Styles/IconsStyles.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/LabelsStyles.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/TextBoxStyles.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/UserSettingsStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
