--- a/Resources/Styles/Animations.xaml
+++ b/Resources/Styles/Animations.xaml
@@ -24,6 +24,14 @@
                     Duration="0:0:0.3" DecelerationRatio="0.6"/>
     </Storyboard>
 
+    <Storyboard x:Key="ShowBorderFromBottomAnimation">
+        <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                     From="0" To="1" Duration="0:0:0.3"/>
+        <ThicknessAnimation Storyboard.TargetProperty="Margin"
+                        From="0,20,0,0" To="0,0,0,0"
+                        Duration="0:0:0.3" DecelerationRatio="0.6"/>
+    </Storyboard>
+
     <Storyboard x:Key="HideBorderAnimation">
         <DoubleAnimation Storyboard.TargetProperty="Opacity"
                      From="1" To="0" Duration="0:0:0.25"/>
