--- a/Views/SupplierOrdersModule/SupplyCard.xaml
+++ b/Views/SupplierOrdersModule/SupplyCard.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ItaliaPizzaClient.Views.UserControls.SupplyCard"
+﻿<UserControl x:Class="ItaliaPizzaClient.Views.SupplierOrdersModule.SupplyCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
