--- a/Views/SupplierOrdersModule/SupplyOrderDetail.xaml
+++ b/Views/SupplierOrdersModule/SupplyOrderDetail.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ItaliaPizzaClient.Views.UserControls.SupplyOrderDetail"
+﻿<UserControl x:Class="ItaliaPizzaClient.Views.SupplierOrdersModule.SupplyOrderDetail"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
