--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -28,21 +28,21 @@
                                 BorderThickness="0.5,0">
                             <Grid>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="64"/>
+                                    <RowDefinition Height="72"/>
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
 
                                 <Border Grid.Row="0" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0,0,0.5">
-                                    <StackPanel Orientation="Horizontal" Margin="16,0,0,0" VerticalAlignment="Center">
+                                    <StackPanel Orientation="Horizontal" Margin="18 0 0 0" VerticalAlignment="Center">
                                         <Image Source="/Resources/Icons/italiapizza-icon.png"
-                                           Width="32" Height="32" RenderOptions.BitmapScalingMode="HighQuality"/>
+                                           Width="34" Height="34" RenderOptions.BitmapScalingMode="HighQuality"/>
                                         <StackPanel Margin="12 0" >
                                             <TextBlock Text="{DynamicResource Glb_ItaliaPizza}"
                                                    Style="{DynamicResource SubtitleLabelStyle}"
-                                                   FontSize="18"
+                                                   FontSize="20"
                                                    VerticalAlignment="Center"/>
                                             <TextBlock Text="SOFT MANAGEMENT"
-                                                   FontSize="9"
+                                                   FontSize="10"
                                                    Style="{DynamicResource DescriptionLabelStyle}"/>
                                         </StackPanel>
                                     </StackPanel>
